Alterações API passageiro
