# src/api/to_de_taxi/services/passageiro.service.ts
@@ -8,10 +8,9 @@ import { Observable as __Observable } from 'rxjs';
 import { map as __map, filter as __filter } from 'rxjs/operators';
 
 import { ResponseIEnumerablePassageiroSummary } from '../models/response-ienumerable-passageiro-summary';
-import { ResponseBoolean } from '../models/response-boolean';
-import { PassageiroSummary } from '../models/passageiro-summary';
-import { ResponseGuid } from '../models/response-guid';
 import { ResponsePassageiroSummary } from '../models/response-passageiro-summary';
+import { PassageiroSummary } from '../models/passageiro-summary';
+import { ResponseBoolean } from '../models/response-boolean';
 @Injectable({
   providedIn: 'root',
 })
@@ -21,6 +20,8 @@ class PassageiroService extends __BaseService {
   static readonly ApiV1PassageiroPostPath = '/api/v1/Passageiro';
   static readonly ApiV1PassageiroByIdGetPath = '/api/v1/Passageiro/{id}';
   static readonly ApiV1PassageiroByIdDeletePath = '/api/v1/Passageiro/{id}';
+  static readonly ApiV1PassageiroAssociarFotoByIdPostPath = '/api/v1/Passageiro/associar_foto/{id}';
+  static readonly ApiV1PassageiroAtivarByIdPostPath = '/api/v1/Passageiro/ativar/{id}';
 
   constructor(
     config: __Configuration,
@@ -66,7 +67,7 @@ class PassageiroService extends __BaseService {
    * @param passageiroSummary Modified Passageiro list's properties summary
    * @return Success
    */
-  ApiV1PassageiroPutResponse(passageiroSummary?: PassageiroSummary): __Observable<__StrictHttpResponse<ResponseBoolean>> {
+  ApiV1PassageiroPutResponse(passageiroSummary?: PassageiroSummary): __Observable<__StrictHttpResponse<ResponsePassageiroSummary>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
@@ -84,7 +85,7 @@ class PassageiroService extends __BaseService {
     return this.http.request<any>(req).pipe(
       __filter(_r => _r instanceof HttpResponse),
       __map((_r) => {
-        return _r as __StrictHttpResponse<ResponseBoolean>;
+        return _r as __StrictHttpResponse<ResponsePassageiroSummary>;
       })
     );
   }
@@ -92,9 +93,9 @@ class PassageiroService extends __BaseService {
    * @param passageiroSummary Modified Passageiro list's properties summary
    * @return Success
    */
-  ApiV1PassageiroPut(passageiroSummary?: PassageiroSummary): __Observable<ResponseBoolean> {
+  ApiV1PassageiroPut(passageiroSummary?: PassageiroSummary): __Observable<ResponsePassageiroSummary> {
     return this.ApiV1PassageiroPutResponse(passageiroSummary).pipe(
-      __map(_r => _r.body as ResponseBoolean)
+      __map(_r => _r.body as ResponsePassageiroSummary)
     );
   }
 
@@ -102,7 +103,7 @@ class PassageiroService extends __BaseService {
    * @param passageiroSummary Passageiro's summary
    * @return Success
    */
-  ApiV1PassageiroPostResponse(passageiroSummary?: PassageiroSummary): __Observable<__StrictHttpResponse<ResponseGuid>> {
+  ApiV1PassageiroPostResponse(passageiroSummary?: PassageiroSummary): __Observable<__StrictHttpResponse<ResponsePassageiroSummary>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
@@ -120,7 +121,7 @@ class PassageiroService extends __BaseService {
     return this.http.request<any>(req).pipe(
       __filter(_r => _r instanceof HttpResponse),
       __map((_r) => {
-        return _r as __StrictHttpResponse<ResponseGuid>;
+        return _r as __StrictHttpResponse<ResponsePassageiroSummary>;
       })
     );
   }
@@ -128,9 +129,9 @@ class PassageiroService extends __BaseService {
    * @param passageiroSummary Passageiro's summary
    * @return Success
    */
-  ApiV1PassageiroPost(passageiroSummary?: PassageiroSummary): __Observable<ResponseGuid> {
+  ApiV1PassageiroPost(passageiroSummary?: PassageiroSummary): __Observable<ResponsePassageiroSummary> {
     return this.ApiV1PassageiroPostResponse(passageiroSummary).pipe(
-      __map(_r => _r.body as ResponseGuid)
+      __map(_r => _r.body as ResponsePassageiroSummary)
     );
   }
 
@@ -205,9 +206,135 @@ class PassageiroService extends __BaseService {
       __map(_r => _r.body as ResponseBoolean)
     );
   }
+
+  /**
+   * @param params The `PassageiroService.ApiV1PassageiroAssociarFotoByIdPostParams` containing the following parameters:
+   *
+   * - `id`: ID do usuário
+   *
+   * - `idFoto`: ID da foto
+   *
+   * @return Success
+   */
+  ApiV1PassageiroAssociarFotoByIdPostResponse(params: PassageiroService.ApiV1PassageiroAssociarFotoByIdPostParams): __Observable<__StrictHttpResponse<ResponseBoolean>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+
+    if (params.idFoto != null) __params = __params.set('idFoto', params.idFoto.toString());
+    let req = new HttpRequest<any>(
+      'POST',
+      this.rootUrl + `/api/v1/Passageiro/associar_foto/${params.id}`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return _r as __StrictHttpResponse<ResponseBoolean>;
+      })
+    );
+  }
+  /**
+   * @param params The `PassageiroService.ApiV1PassageiroAssociarFotoByIdPostParams` containing the following parameters:
+   *
+   * - `id`: ID do usuário
+   *
+   * - `idFoto`: ID da foto
+   *
+   * @return Success
+   */
+  ApiV1PassageiroAssociarFotoByIdPost(params: PassageiroService.ApiV1PassageiroAssociarFotoByIdPostParams): __Observable<ResponseBoolean> {
+    return this.ApiV1PassageiroAssociarFotoByIdPostResponse(params).pipe(
+      __map(_r => _r.body as ResponseBoolean)
+    );
+  }
+
+  /**
+   * @param params The `PassageiroService.ApiV1PassageiroAtivarByIdPostParams` containing the following parameters:
+   *
+   * - `id`: ID do usuário
+   *
+   * - `ativar`: Indica se o usuário será ativado/desativado
+   *
+   * @return Success
+   */
+  ApiV1PassageiroAtivarByIdPostResponse(params: PassageiroService.ApiV1PassageiroAtivarByIdPostParams): __Observable<__StrictHttpResponse<ResponseBoolean>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+
+    if (params.ativar != null) __params = __params.set('ativar', params.ativar.toString());
+    let req = new HttpRequest<any>(
+      'POST',
+      this.rootUrl + `/api/v1/Passageiro/ativar/${params.id}`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return _r as __StrictHttpResponse<ResponseBoolean>;
+      })
+    );
+  }
+  /**
+   * @param params The `PassageiroService.ApiV1PassageiroAtivarByIdPostParams` containing the following parameters:
+   *
+   * - `id`: ID do usuário
+   *
+   * - `ativar`: Indica se o usuário será ativado/desativado
+   *
+   * @return Success
+   */
+  ApiV1PassageiroAtivarByIdPost(params: PassageiroService.ApiV1PassageiroAtivarByIdPostParams): __Observable<ResponseBoolean> {
+    return this.ApiV1PassageiroAtivarByIdPostResponse(params).pipe(
+      __map(_r => _r.body as ResponseBoolean)
+    );
+  }
 }
 
 module PassageiroService {
+
+  /**
+   * Parameters for ApiV1PassageiroAssociarFotoByIdPost
+   */
+  export interface ApiV1PassageiroAssociarFotoByIdPostParams {
+
+    /**
+     * ID do usuário
+     */
+    id: string;
+
+    /**
+     * ID da foto
+     */
+    idFoto?: string;
+  }
+
+  /**
+   * Parameters for ApiV1PassageiroAtivarByIdPost
+   */
+  export interface ApiV1PassageiroAtivarByIdPostParams {
+
+    /**
+     * ID do usuário
+     */
+    id: string;
+
+    /**
+     * Indica se o usuário será ativado/desativado
+     */
+    ativar?: boolean;
+  }
 }
 
 export { PassageiroService }
